--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ matrix:
     stage: acceptance-test
     if: type != cron
     php: 7.1
-    env: GATEWAY=API-TEST
+    env: GATEWAY=TEST-SG
     install:
     - travis_retry composer require --dev $COMPOSER_ARGS codeception/codeception
     - travis_retry composer install $COMPOSER_ARGS
@@ -51,14 +51,14 @@ matrix:
     after_failure:
     - bash .bin/output-failed-logs.sh
     - bash .bin/upload-logs-and-notify.sh
-  - <<: *acceptance-test
-    env: GATEWAY=API-WDCEE-TEST
-  - <<: *acceptance-test
-    env: GATEWAY=NOVA
-  - <<: *acceptance-test
-    env: GATEWAY=SECURE-TEST-SG
-  - <<: *acceptance-test
-    env: GATEWAY=TEST-SG
+#  - <<: *acceptance-test
+#    env: GATEWAY=API-WDCEE-TEST
+#  - <<: *acceptance-test
+#    env: GATEWAY=NOVA
+#  - <<: *acceptance-test
+#    env: GATEWAY=SECURE-TEST-SG
+#  - <<: *acceptance-test
+#    env: GATEWAY=TEST-SG
 
 before_install:
   - travis_retry composer self-update
