check all configs in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ matrix:
     stage: acceptance-test
     if: type != cron
     php: 7.1
-    env: GATEWAY=TEST-API
+    env: GATEWAY=API-TEST
     install:
     - travis_retry composer require --dev $COMPOSER_ARGS codeception/codeception
     - travis_retry composer install $COMPOSER_ARGS
