--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,8 @@ matrix:
     script: bash .bin/run-ui-tests.sh
     after_failure:
     - bash .bin/output-failed-logs.sh
+    - bash .bin/upload-logs-and-notify.sh fail
+    after_success:
     - bash .bin/upload-logs-and-notify.sh
   - <<: *acceptance-test
     env: GATEWAY=API-WDCEE-TEST
